# agent

./: .gitignore  AGENTS.md  README.md
api/: .env.example  .gitignore  DEPLOY.md  Dockerfile  README.md  alembic.ini  fly.toml  pyproject.toml
api/alembic/: env.py  script.py.mako
api/alembic/versions/: 0001_initial_schema.py  0002_preferences.py  0003_user_password_hash.py  0004_users_email_unique.py  0005_message_responds_to.py  0006_message_usage_cost.py  0007_stream_table.py  0008_cost_numeric.py  0009_conversation_share.py  0010_active_stream_unique.py  0011_privacy_controls_audit.py  0012_usage_credit_ledger.py  0013_usage_credit_ledger_constraints.py  0014_message_request_fingerprint.py  0015_launch_analytics.py  0016_billing_entitlements.py  0017_custom_instructions.py  0018_preferences_monthly_budget.py  0019_preferences_per_conversation_budget.py  0020_conversation_retention.py  0020_memory_ledger.py  0021_memory_ledger.py  0022_projects.py  0023_prompt_library.py  0024_keyboard_shortcuts.py  0025_conversation_tags_archive.py  0026_conversation_expiry_sensitive.py  0027_preferences_default_reasoning_effort.py  0027_preferences_popup_selections.py
api/app/: __init__.py  account_info.py  config.py  deps.py  errors.py  guest_limits.py  logging_setup.py  main.py  prompt_assembly.py  suggestions.py  uploads.py
api/app/agentic/: __init__.py  budget.py  (+5 more)
api/tests/: conftest.py  test_account_data.py  test_activity.py  test_agentic_approval.py  test_agentic_budget.py  test_agentic_fanout.py  test_agentic_flag_off.py  test_agentic_m4.py  test_agentic_m4_gaps.py  test_agentic_real_provider.py  test_agentic_resilience.py  test_agentic_safety.py  test_analytics.py  test_anthropic_client_cache.py  test_auth.py  test_auth_login.py  test_auth_upgrade.py  test_billing.py  test_bootstrap.py  test_budget.py  test_bulk_actions.py  test_byok.py  test_byok_rewrap.py  test_citations.py  test_compaction.py  test_config.py  test_conversations.py  test_conversations_mutations.py  test_crypto.py  test_db_hardening.py  test_errors.py  test_factory.py  test_fake_provider_web_search.py  test_feedback.py  test_guest_limits.py  test_logging.py  test_memory.py  test_memory_extraction.py  test_messages_repo.py  test_messages_stream.py  (+38 more)
(+333 files in other folders)
